--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8" />
-<title>Redirecting to https://dol-lyra.github.io</title>
-<meta http-equiv="refresh" content="0; URL=https://dol-lyra.github.io/" />
-<link rel="canonical" href="https://dol-lyra.github.io/" />
+<title>Redirecting to https://dol-lyra.github.io/hub</title>
+<meta http-equiv="refresh" content="0; URL=https://dol-lyra.github.io/hub/" />
+<link rel="canonical" href="https://dol-lyra.github.io/hub/" />
