--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
 <!doctype html>
-<meta charset="utf-8" />
-<title>Redirecting to https://dol-lyra.github.io/hub</title>
-<meta http-equiv="refresh" content="0; URL=https://dol-lyra.github.io/hub/" />
-<link rel="canonical" href="https://dol-lyra.github.io/hub/" />
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Error 404 :(</title>
+
+    <script>
+      window.onload = function () {
+        const destination = window.location.href;
+        if (window.location.href.includes("dol-chs-mods.github.io/hub")) {
+          const redirectLocation = window.location.href.replace(
+            "dol-chs-mods.github.io",
+            "dol-lyra.github.io",
+          );
+          document.getElementById("body").innerHTML =
+            "dol-chs-mods has moved into an organization repository!<br/><br/>Redirecting to " +
+            redirectLocation +
+            " ...";
+          window.location.href = redirectLocation;
+        }
+      };
+    </script>
+  </head>
+
+  <body id="body" style="text-align: center">
+    Page not found
+  </body>
+</html>
